--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ license = "MIT"
 anyhow = "^1.0.100"
 clap = { version = "^4.5.45", features = ["derive"] }
 env_logger = "^0.11.3"
+image = "^0.25.9"
 log = "^0.4.21"
 uuid = { version = "^1.19.0", features = [ "v4" ] }
